objects/Account.object
<CustomObject>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM (MM$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Code__c</fullName>
        <description>Account Executive Code, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <formula>Ejecutivo_de_Cuenta__r.ROL_Number__c</formula>
        <label>Account Executive Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actividad_Economica_SBIF__c</fullName>
        <label>Actividad Económica (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
                <value>
                    <fullName>Adm. Pública y Defensa</fullName>
                </value>
                <value>
                    <fullName>Agricultura</fullName>
                </value>
                <value>
                    <fullName>Agricultura y Ganadería excepto Frutic.</fullName>
                </value>
                <value>
                    <fullName>Agroindustria</fullName>
                </value>
                <value>
                    <fullName>Alimentos, Bebidas y Tabaco</fullName>
                </value>
                <value>
                    <fullName>Bienes Inmuebles y Serv. Prest. a Empre.</fullName>
                </value>
                <value>
                    <fullName>Captación y Distribución de Agua</fullName>
                </value>
                <value>
                    <fullName>Celusosa y Papeles</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Mayor</fullName>
                </value>
                <value>
                    <fullName>Comercio al por Menor</fullName>
                </value>
                <value>
                    <fullName>Comercio x Menor, Restaurantes y Hoteles</fullName>
                </value>
                <value>
                    <fullName>Comunicaciones</fullName>
                </value>
                <value>
                    <fullName>Construcción de otras obras</fullName>
                </value>
                <value>
                    <fullName>Construcción de Viviendas</fullName>
                </value>
                <value>
                    <fullName>Construcciones no residenciales</fullName>
                </value>
                <value>
                    <fullName>Construcciones residenciales</fullName>
                </value>
                <value>
                    <fullName>Crédito de consumo</fullName>
                </value>
                <value>
                    <fullName>Crédito hipotecario para la vivienda</fullName>
                </value>
                <value>
                    <fullName>Cuero y Calzado</fullName>
                </value>
                <value>
                    <fullName>Cultivo de Salmones y Truchas</fullName>
                </value>
                <value>
                    <fullName>Distribución y Comercialización de Bebidas Alcohólicas</fullName>
                </value>
                <value>
                    <fullName>Diversión y Esparcimiento</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Agua</fullName>
                </value>
                <value>
                    <fullName>Electricidad, Gas y Vapor</fullName>
                </value>
                <value>
                    <fullName>Estab. Financieros y de Seguros</fullName>
                </value>
                <value>
                    <fullName>Explotación de Bosques</fullName>
                </value>
                <value>
                    <fullName>Explotación de Minas y Canteras</fullName>
                </value>
                <value>
                    <fullName>Fab. Prod. Mineros, Metálicos y No Metálicos</fullName>
                </value>
                <value>
                    <fullName>Fruticultura</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Opps__c</fullName>
        <label>$$ Oportunidades</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atencion_diferencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atención diferencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizaci_n_de_informar_a_organismo_FAT__c</fullName>
        <label>Autorización de informar a organismo FAT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCS_Circ_10672_10673_BCS__c</fullName>
        <label>BCS (Circ. 10672-10673 BCS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BICE_Classification_del__c</fullName>
        <description>La Clasificacion BICE: solo es visible para Persona Jurídica.
(No confundir con Clasificación Comercial BICE Comercial_clasification__c que es para Personas Naturales).</description>
        <label>Clasificación BICE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BANCO E INSTITUCIONES FINANCIERAS</fullName>
                </value>
                <value>
                    <fullName>EMPRESAS PERSONALES</fullName>
                </value>
                <value>
                    <fullName>GRAN EMPRESA</fullName>
                </value>
                <value>
                    <fullName>INTERMEDIARIO DE VALORES</fullName>
                </value>
                <value>
                    <fullName>INVERSIONISTA INSTITUCIONAL</fullName>
                </value>
                <value>
                    <fullName>MEDIANA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>MEGA EMPRESA</fullName>
                </value>
                <value>
                    <fullName>PERSONAS NATURALES</fullName>
                </value>
                <value>
                    <fullName>SOCIEDADES PRODUCTIVAS</fullName>
                </value>
                <value>
                    <fullName>SOCIEDAD DE INV.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF_Id__c</fullName>
        <description>This CIF Id will be used as the external id to link external data (from MDM) into Salesforce accounts</description>
        <externalId>true</externalId>
        <label>CIF Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calle_comercial__c</fullName>
        <label>Calle comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_particular__c</fullName>
        <label>Calle particular</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carpeta_comercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta comercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carpeta_operativa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Carpeta operativa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categoria_Deudor__c</fullName>
        <label>Categoria Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sin definir</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circ_57_2017_UAF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circular 57 2017 UAF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_comercial__c</fullName>
        <label>Ciudad o Provincia comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_o_Provincia_particular__c</fullName>
        <label>Ciudad o Provincia particular</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clasificacion_de_Riesgo_SBIF__c</fullName>
        <description>La Clasificación de riesgo SBIF solo es visible para Persona Jurídica.</description>
        <label>Clasificación de Riesgo (SBIF)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clasificacion_submargenes__c</fullName>
        <label>Clasificación submárgenes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personas</fullName>
                </value>
                <value>
                    <fullName>Clientes Corporativos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_APV__c</fullName>
        <inlineHelpText>Es Cliente de Ahorro Previsional Voluntario (APV)?</inlineHelpText>
        <label>Cliente APV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_AP__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonios con Cuentas no Administradas?</inlineHelpText>
        <label>Cliente AP Cuentas no Administradas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_AP_con_Administraci_n_Cartera__c</fullName>
        <inlineHelpText>Cliente Altos Patrimonio con Administración de Cartera</inlineHelpText>
        <label>Cliente AP con Administración Cartera</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_ARE_s__c</fullName>
        <inlineHelpText>Es Cliente del Área de Referidos Externos (ARE&apos;s)</inlineHelpText>
        <label>Cliente ARE&apos;s</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_BIA__c</fullName>
        <label>Cliente BIA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Banco__c</fullName>
        <label>Cliente Banco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                    <isActive>false</isActive>
                    <label>N</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <isActive>false</isActive>
                    <label>S</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_Relacionado__c</fullName>
        <inlineHelpText>Es un Cliente Relacionado?</inlineHelpText>
        <label>Cliente Relacionado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sí</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cliente_desde__c</fullName>
        <label>Cliente desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_resultado_compliance_tracker__c</fullName>
        <label>Código resultado compliance tracker</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commercial_Classification__c</fullName>
        <label>Commercial Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>A6</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_FAX_Other__c</fullName>
        <description>Commercial FAX Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial FAX Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Landline__c</fullName>
        <description>Commercial Landline, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commercial_Phone_Other__c</fullName>
        <description>Commercial Phone Other, used in customer creation form for &quot;Personas Naturales&quot; and &quot;Personas Jurídicas&quot;</description>
        <label>Commercial Phone Other</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Comuna_comercial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna comercial</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comuna_particular__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comuna particular</label>
        <referenceTo>Comuna__c</referenceTo>
        <relationshipLabel>Cuentas (Comuna particular)</relationshipLabel>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contador__c</fullName>
        <formula>(now()-CreatedDate)*86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contador</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copia_de_RUT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copia de RUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copia_inscripcion_original__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copia inscripción original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crear_Cliente__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Al marcarlo, ejecutivo solicita la creación del cliente al área de creación de Clientes</description>
        <label>Crear Cliente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Credit_Limit__c</fullName>
        <description>Field to store Current MAC Credit Limit  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Expiration_Date__c</fullName>
        <description>Field to store Current MAC Expiration Date  - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Presentation_Date__c</fullName>
        <description>Field to store the Current MAC Presentation Date - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Request_Date__c</fullName>
        <description>Field to store the current MAC request date - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Request_Number__c</fullName>
        <description>Field to store the MAC request Number - for a Comité Meeting that occurs in respect to a customer.</description>
        <label>Current MAC Request Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_MAC_Status__c</fullName>
        <description>Field to store Current MAC Status  - for a Comité Meeting that occurs in respect to a customer. Below the Codes and corresponding values of description, used in this picklist.

CODIGO	DESCRIPCION
A	APROBADO
D	DIGITADO POR AUXILIAR
P	EN PROCESO POR EJECUTIVO
R	RECHAZADO
PES04	EN PROCESO COMITE
PES06	CONDICIONADO COMITE
M	MODIFICACION GCIA DE CREDITOS
PES10	MANUAL
PES07	CADUCADO</description>
        <label>Current MAC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APROBADO</fullName>
                </value>
                <value>
                    <fullName>DIGITADO POR AUXILIAR</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO POR EJECUTIVO</fullName>
                </value>
                <value>
                    <fullName>RECHAZADO</fullName>
                </value>
                <value>
                    <fullName>EN PROCESO COMITE</fullName>
                </value>
                <value>
                    <fullName>CONDICIONADO COMITE</fullName>
                </value>
                <value>
                    <fullName>MODIFICACION GCIA DE CREDITOS</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
                <value>
                    <fullName>CADUCADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_type_other_rating_c__c</fullName>
        <label>Tipo de Cliente otra clasificación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gerencia Finanzas</fullName>
                </value>
                <value>
                    <fullName>Gerencia Comercial</fullName>
                </value>
                <value>
                    <fullName>Acc.Jurídico + 10%</fullName>
                </value>
                <value>
                    <fullName>Bice</fullName>
                </value>
                <value>
                    <fullName>Directores y Emplead</fullName>
                </value>
                <value>
                    <fullName>Comercio Exterior</fullName>
                </value>
                <value>
                    <fullName>Factoring Pagador</fullName>
                </value>
                <value>
                    <fullName>Cliente Ahorro</fullName>
                </value>
                <value>
                    <fullName>Cliente Inactivo</fullName>
                </value>
                <value>
                    <fullName>Factoring Cedente</fullName>
                </value>
                <value>
                    <fullName>Desglose Balance</fullName>
                </value>
                <value>
                    <fullName>Acc.(Natural) + 5% K</fullName>
                </value>
                <value>
                    <fullName>Cliente Pot.</fullName>
                </value>
                <value>
                    <fullName>Cliente Relacionado</fullName>
                </value>
                <value>
                    <fullName>Proveedores</fullName>
                </value>
                <value>
                    <fullName>Cliente Corr. de Bol</fullName>
                </value>
                <value>
                    <fullName>Cliente Fdo Mutuo</fullName>
                </value>
                <value>
                    <fullName>Cliente DPF</fullName>
                </value>
                <value>
                    <fullName>Cliente Cuenta Vista</fullName>
                </value>
                <value>
                    <fullName>Cliente Producto BIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAI_de_la_Soc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DAI de la Soc.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCV_Circ_190_SVS__c</fullName>
        <label>DCV (Circ. 190 SVS)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_as_para_vencimiento__c</fullName>
        <formula>Fecha_de_vencimiento_MAC__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días para vencimiento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_last_modify__c</fullName>
        <formula>NOW()-LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Días de última modificación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Descripci_n_cuenta__c</fullName>
        <label>Descripción cuenta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deuda_Sistema_Financiero_MM_pesos__c</fullName>
        <label>Deuda Sistema Financiero (MM$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Documentaci_n_sustentatoria_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentación sustentatoria EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_COMEX__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo COMEX</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cuentas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_Leasing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo Leasing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ejecutivos_Leasing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_de_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Cuenta</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ejecutivo_de_Inversiones__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Inversiones</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Escritura_publica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escritura pública</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_Creaci_n_de_Cliente__c</fullName>
        <label>Creación Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Realizado</fullName>
                </value>
                <value>
                    <fullName>Reparos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estado_Deudor__c</fullName>
        <label>Estado Deudor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estracto_Diario_Oficial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estracto Diario Oficial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FATCA_Information__c</fullName>
        <description>Este campo lo llena el Área Clientes solamente.</description>
        <label>Información FATCA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Es US Person</fullName>
                </value>
                <value>
                    <fullName>No es US Person</fullName>
                </value>
                <value>
                    <fullName>Es FFI</fullName>
                </value>
                <value>
                    <fullName>Es US Entity</fullName>
                </value>
                <value>
                    <fullName>No es US Entity</fullName>
                </value>
                <value>
                    <fullName>Es Recalcitrante</fullName>
                </value>
                <value>
                    <fullName>Pendiente Ejecutivo</fullName>
                </value>
                <value>
                    <fullName>Pertenece al Stock al 30/06/2014</fullName>
                    <label>Stock al 30/06/2014</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Favorite_Channel__c</fullName>
        <description>vista 360</description>
        <label>Canal Preferido</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correo</fullName>
                </value>
                <value>
                    <fullName>Telefono</fullName>
                    <label>Teléfono</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_Constitucion_Empresa__c</fullName>
        <label>Fecha Constitución Empresa</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_MAC_Apertura_Cuenta__c</fullName>
        <label>Fecha MAC Apertura Cuenta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Solicitud_Crear_Cliente__c</fullName>
        <label>Fecha Solicitud Crear Cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_conversi_n_a_cliente__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de conversión a cliente</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_declaracion_de_margen__c</fullName>
        <label>Fecha de declaración de margen</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_vencimiento_MAC__c</fullName>
        <label>Fecha de vencimiento MAC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_fin_relaci_n__c</fullName>
        <label>Fecha fin relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_inicio_relaci_n__c</fullName>
        <label>Fecha inicio relación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_resultado_comit__c</fullName>
        <label>Fecha resultado comité</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ficha_cuenta__c</fullName>
        <label>Ficha cuenta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filled_Client_Data__c</fullName>
        <formula>(IF( ISPICKVAL(Cliente_BIA__c, &quot;&quot;),0,1)
+IF(ISBLANK(Ejecutivo_de_Inversiones__c),0,1)
+IF(ISPICKVAL(Perfil_de_Riesgo__c,&quot;&quot;),0,1)
+IF(ISBLANK(AUM__c),0,1))/4</formula>
        <label>Datos cliente completados</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Form_Art_85__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Art. 85</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_EESS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. EESS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_FATCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form.FATCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Ingreso_Maestro_de_Clientes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Ingreso Maestro de Clientes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Solicitud_de_Productos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form. Solicitud de Productos</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>